# AutoSRE-AI

./: .gitignore  Dockerfile  README.md  demo.py  inference.py  openenv.yaml  postman_testing.txt  pyproject.toml  requirements.txt
app/api/: routes.py
app/config/: settings.py
app/env/: environment.py  logic.py
app/grader/: grader.py
app/llm/: gemini_client.py  openai_client.py  router.py
app/models/: action.py  observation.py  state.py
app/tasks/: easy.py  hard.py  medium.py
autosre_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: app.py
